@@ -1,6 +1,6 @@
 .\"
 .\" -*- nroff -*-
-.TH "EDA" "1" "2016-12-01" "0.9.53" ""
+.TH "EDA" "1" "2016-12-04" "0.9.53" ""
 
 .SH "NAME"
 \fBeda\fR \- text editor and analyzer for programmers
