@@ -1,5 +1,5 @@
 .\"
-.TH "EDAMACRO" "5" "2016-12-01" "0.9.53" ""
+.TH "EDAMACRO" "5" "2016-12-04" "0.9.53" ""
 
 .SH "NAME"
 \fBeda\fR \- editor for programmers, the internal function API for macros
